--------------------------
Changelog
--------------------------

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](http://keepachangelog.com/)
and this project adheres to [Semantic Versioning](http://semver.org/).

2017-07-10 Benoit Desrochers <ben.ensta@gmail.com>
  * [update] add "oo" to represent infinit number in order to write [0, oo]
  * [fix] conversion of [lb, ub] to Interval. ex: SepFwdBwd(f, [1, 2])
  * [fix] errors in SepProj algorithm
  * [update] add message when syntaxe error is raised in Function constructor

2017-07-02 Benoit Desrochers <ben.ensta@gmail.com>
  * [fix] add default arguement ratio for CtcFixPoint
  * [update] add automoatic conversion from Interval to IntervalVector
  * [fix] bug in SepProj when y is empty

2017-06-29 Benoit Desrochers <ben.ensta@gmail.com>
  * RELEASE V1.6
  * [new] add SepFixpoint to handle fix point of a separator
  * [new] add SepTransform -> f(S(f^1(X)))
  * [new] add SepProj projection of a sepatator
  * [new] add SepCtcPair projection of a separator based on CtcExist/CtcForAll
  * [new] add CtcQInterProjF and SepQInterProjF
  * [new] add ibex-geometry content with SepPolygon and CtcPolar
  * [update] add "compactness" option on diff method (IntervalVector)
  * [update] add "ratio" argument to CtcFixPoint contrator


2017-01-04 Benoit Desrochers <ben.ensta@gmail.com>
  * [update] upgrade pybind11 to version 2.0.0
  * [new]  __contains__ for Interval and IntervalVector
  * [fix]    add version number in python module __version__

2016-09-15 Benoit Desrochers <ben.ensta@gmail.com>
  * [fix] update pybind11 code to support reflected operator (__radd__, ...)
  * [fix] remove print in tests.
  * [fix] export LEQ, GEQ, ... directly (no need to CmpOp.LEQ)
  * [update] update pybind11 to last version ( tuple and list => vector)
  * [update] use last version of ibex

2016-08-31 Benoit Desrochers <ben.ensta@gmail.com>
  * write phinx doc